impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  late final _BELDEX_Coins_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Coins_count');
  late final _BELDEX_Coins_count =
      _BELDEX_Coins_countPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_Coins_coin(
    ffi.Pointer<ffi.Void> coins_ptr,
    int index,
  ) {
    return _BELDEX_Coins_coin(
      coins_ptr,
      index,
    );
  }

  late final _BELDEX_Coins_coinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Int)>>('BELDEX_Coins_coin');
  late final _BELDEX_Coins_coin = _BELDEX_Coins_coinPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_Coins_getAll_size(
    ffi.Pointer<ffi.Void> coins_ptr,
  ) {
    return _BELDEX_Coins_getAll_size(
      coins_ptr,
    );
  }

  late final _BELDEX_Coins_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Coins_getAll_size');
  late final _BELDEX_Coins_getAll_size = _BELDEX_Coins_getAll_sizePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_Coins_getAll_byIndex(
    ffi.Pointer<ffi.Void> coins_ptr,
    int index,
  ) {
    return _BELDEX_Coins_getAll_byIndex(
      coins_ptr,
      index,
    );
  }

  late final _BELDEX_Coins_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Int)>>('BELDEX_Coins_getAll_byIndex');
  late final _BELDEX_Coins_getAll_byIndex = _BELDEX_Coins_getAll_byIndexPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  void BELDEX_Coins_refresh(
    ffi.Pointer<ffi.Void> coins_ptr,
  ) {
    return _BELDEX_Coins_refresh(
      coins_ptr,
    );
  }

  late final _BELDEX_Coins_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Coins_refresh');
  late final _BELDEX_Coins_refresh = _BELDEX_Coins_refreshPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_Coins_setFrozenByPublicKey(
    ffi.Pointer<ffi.Void> coins_ptr,
    ffi.Pointer<ffi.Char> public_key,
  ) {
    return _BELDEX_Coins_setFrozenByPublicKey(
      coins_ptr,
      public_key,
    );
  }

  late final _BELDEX_Coins_setFrozenByPublicKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Coins_setFrozenByPublicKey');
  late final _BELDEX_Coins_setFrozenByPublicKey =
      _BELDEX_Coins_setFrozenByPublicKeyPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void BELDEX_Coins_setFrozen(
    ffi.Pointer<ffi.Void> coins_ptr,
    int index,
  ) {
    return _BELDEX_Coins_setFrozen(
      coins_ptr,
      index,
    );
  }

  late final _BELDEX_Coins_setFrozenPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'BELDEX_Coins_setFrozen');
  late final _BELDEX_Coins_setFrozen = _BELDEX_Coins_setFrozenPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int)>();

  void BELDEX_Coins_thaw(
    ffi.Pointer<ffi.Void> coins_ptr,
    int index,
  ) {
    return _BELDEX_Coins_thaw(
      coins_ptr,
      index,
    );
  }

  late final _BELDEX_Coins_thawPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'BELDEX_Coins_thaw');
  late final _BELDEX_Coins_thaw = _BELDEX_Coins_thawPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int)>();

  void BELDEX_Coins_thawByPublicKey(
    ffi.Pointer<ffi.Void> coins_ptr,
    ffi.Pointer<ffi.Char> public_key,
  ) {
    return _BELDEX_Coins_thawByPublicKey(
      coins_ptr,
      public_key,
    );
  }

  late final _BELDEX_Coins_thawByPublicKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Coins_thawByPublicKey');
  late final _BELDEX_Coins_thawByPublicKey =
      _BELDEX_Coins_thawByPublicKeyPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool BELDEX_Coins_isTransferUnlocked(
    ffi.Pointer<ffi.Void> coins_ptr,
    int unlockTime,
    int blockHeight,
  ) {
    return _BELDEX_Coins_isTransferUnlocked(
      coins_ptr,
      unlockTime,
      blockHeight,
    );
  }

  late final _BELDEX_Coins_isTransferUnlockedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Uint64,
              ffi.Uint64)>>('BELDEX_Coins_isTransferUnlocked');
  late final _BELDEX_Coins_isTransferUnlocked =
      _BELDEX_Coins_isTransferUnlockedPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, int, int)>();

  void BELDEX_Coins_setDescription(
    ffi.Pointer<ffi.Void> coins_ptr,
    ffi.Pointer<ffi.Char> public_key,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _BELDEX_Coins_setDescription(
      coins_ptr,
      public_key,
      description,
    );
  }

  late final _BELDEX_Coins_setDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Coins_setDescription');
  late final _BELDEX_Coins_setDescription =
      _BELDEX_Coins_setDescriptionPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressRow_extra(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _BELDEX_SubaddressRow_extra(
      subaddressRow_ptr,
    );
  }

  late final _BELDEX_SubaddressRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_SubaddressRow_extra');
  late final _BELDEX_SubaddressRow_extra = _BELDEX_SubaddressRow_extraPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressRow_getAddress(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _BELDEX_SubaddressRow_getAddress(
      subaddressRow_ptr,
    );
  }

  late final _BELDEX_SubaddressRow_getAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_SubaddressRow_getAddress');
  late final _BELDEX_SubaddressRow_getAddress =
      _BELDEX_SubaddressRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressRow_getLabel(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _BELDEX_SubaddressRow_getLabel(
      subaddressRow_ptr,
    );
  }

  late final _BELDEX_SubaddressRow_getLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_SubaddressRow_getLabel');
  late final _BELDEX_SubaddressRow_getLabel = _BELDEX_SubaddressRow_getLabelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_SubaddressRow_getRowId(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _BELDEX_SubaddressRow_getRowId(
      subaddressRow_ptr,
    );
  }

  late final _BELDEX_SubaddressRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_SubaddressRow_getRowId');
  late final _BELDEX_SubaddressRow_getRowId = _BELDEX_SubaddressRow_getRowIdPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Subaddress_getAll_size(
    ffi.Pointer<ffi.Void> subaddress_ptr,
  ) {
    return _BELDEX_Subaddress_getAll_size(
      subaddress_ptr,
    );
  }

  late final _BELDEX_Subaddress_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Subaddress_getAll_size');
  late final _BELDEX_Subaddress_getAll_size = _BELDEX_Subaddress_getAll_sizePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_Subaddress_getAll_byIndex(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int index,
  ) {
    return _BELDEX_Subaddress_getAll_byIndex(
      subaddress_ptr,
      index,
    );
  }

  late final _BELDEX_Subaddress_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_Subaddress_getAll_byIndex');
  late final _BELDEX_Subaddress_getAll_byIndex =
      _BELDEX_Subaddress_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  void BELDEX_Subaddress_addRow(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _BELDEX_Subaddress_addRow(
      subaddress_ptr,
      accountIndex,
      label,
    );
  }

  late final _BELDEX_Subaddress_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Subaddress_addRow');
  late final _BELDEX_Subaddress_addRow =
      _BELDEX_Subaddress_addRowPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void BELDEX_Subaddress_setLabel(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
    int addressIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _BELDEX_Subaddress_setLabel(
      subaddress_ptr,
      accountIndex,
      addressIndex,
      label,
    );
  }

  late final _BELDEX_Subaddress_setLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Subaddress_setLabel');
  late final _BELDEX_Subaddress_setLabel =
      _BELDEX_Subaddress_setLabelPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Void>, int, int, ffi.Pointer<ffi.Char>)>();

  void BELDEX_Subaddress_refresh(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
  ) {
    return _BELDEX_Subaddress_refresh(
      subaddress_ptr,
      accountIndex,
    );
  }

  late final _BELDEX_Subaddress_refreshPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Uint32)>>('BELDEX_Subaddress_refresh');
  late final _BELDEX_Subaddress_refresh = _BELDEX_Subaddress_refreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressAccountRow_extra(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_extra(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_SubaddressAccountRow_extra');
  late final _BELDEX_SubaddressAccountRow_extra =
      _BELDEX_SubaddressAccountRow_extraPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressAccountRow_getAddress(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_getAddress(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_getAddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_SubaddressAccountRow_getAddress');
  late final _BELDEX_SubaddressAccountRow_getAddress =
      _BELDEX_SubaddressAccountRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();
